--- a/about.html
+++ b/about.html
@@ -14,15 +14,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
       integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/kpf7nnc.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
   </head>
   <body>
     <header class="fixed-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-nav">
         <div class="container-fluid">
-          <button class="navbar-toggler bg-toggle1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <!-- <button class="navbar-toggler bg-toggle1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
+          </button> -->
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="ms-auto"></div>-
             <ul class="navbar-nav">
@@ -46,7 +46,7 @@
             <div class="ms-auto"></div>
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link active" href="#">program</a></li>
+              <li class="nav-item"><a class="nav-link active" href="#">Program</a></li>
               <li class="nav-item"><a class="nav-link active" href="#">Developers</a></li>
               <li class="nav-item"><a class="nav-link active" href="#">Sponsors</a></li>
               <li class="nav-item border border-3 border-danger"><a class="nav-link" href="#">CB Campain</a></li>
@@ -55,91 +55,102 @@
         </div>
       </nav>
     </header>
-    <div class="container">
-      <main>
-        <div class="mobile">
-          <header>
-            <nav>
-              <button type="button"  class="noMenu">
-                <i
-                  class="fa fa-bars fa-2x"
-                  id="burger"
-                  aria-hidden="true">
-                </i>
-              </button>
-              <a href="about.html"><img id="menu-logo" src="images/logo.png" alt="Logo"/></a>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Program</a></li>
-                <li><a href="">Developers</a></li>
-                <li><a href="">Sponsor</a></li>
-                <li><a href="">CN Campaign</a></li>
-              </ul>
-            </nav>
-            <div class="mobile-menu">
-              <div class="faIcon">
-                <i
-                  class="fas fa-times fa-2x"
-                  id="hideMenu">
-                  </i
-                ><br />
-              </div>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#program">Program</a></li>
-                <li><a href="#speakers">Developers</a></li>
-                <li><a href="#patners">Sponsor</a></li>
-                <li><a href="">CN Campaign</a></li>
-              </ul>
+    <main>
+      <section id="landing-p">
+        <div class="container">
+          <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10 mt-5 mb-2 pt-5">
+              <h2 class="mb-5">The east african software<br>developers' Community Annual symposium<br>2022</h2>
+              <p id="intro">
+                This  annual symposium brings together the community of experts,academics and activists who comprise the East african software developers
+                community, affiliate network in different countries every year.This year we we hope to expand our invitation list including
+                organisations and individuals.
+              </p>
+              <p id="contact">
+                Please contact us by E-mail for any further questions about The east african software. developers' Community Annual symposium 2022<br>
+                <a href="">easdc@community.org</a>
+              </p>
             </div>
-          </header>
-          <section class="landing-about">
-            <h1>Standard Code <br />developers' global summit <br />2023</h1>
-            <p id="intro">
-              This Grand summit brings together the community of
-              experts,academics and activists who comprise the Standard code
-              Academy, affiliate network in different countries every year.This
-              year we we hope to expand our invitation list including
-              organisations and individuals.
-            </p>
-            <p id="contact">
-              Please contact us per Email for any further questions about
-              Standard developers' Code Global summit 2023.
-              <a href="">standardcode2023summit@gmail.org</a>
-            </p>
-          </section>
-        </div>
-        <section class="further-details">
-          <h2>Standard Code developers' Global Summit 2023 Logo</h2>
-          <div class="liner"></div>
-          <p>
-            The logo of Standard Code developers' Global summit 2023 was decided
-            through the Logo competition from 8,June 2023 to 7,July 2023
-          </p>
-          <div class="logo">
-            <img src="images/logo.png" alt="logo" />
+            <div class="col-1"></div>
           </div>
-          <div class="summits">
+        </div>
+      </section>
+      <!-------------------------------------------------------------------->
+
+      <section class="program" id="program">
+        <div class="row program-title container-fluid mx-auto">
+          <div class="col"></div>
+          <div class="col-10 mt-2 pt-2"><h2>The east african software' developers' Community Annual symposium 2022 Logo</h2></div>
+          <div class="col"></div>
+        </div>
+        <div class="row program-title container mx-auto">
+          <div class="col"></div>
+          <div class="col-4"><hr id="line"></div>
+          <div class="col"></div>
+        </div>
+        <div class="row program-title container-fluid mx-auto">
+          <div class="col"></div>
+          <div class="col-8 mt-3 pt-3">
             <p>
-              Take a look at the past two Standard code Global Summits which
-              took place in Beijing and in Tokyo
+              The logo of the east african software' developers' Community' symposium 2023 was decided
+              through the Logo competition from 8,June 2020 to 7,July 2020
             </p>
-            <div class="summit-image">
-              <img src="images/conf3.png" alt="confernce"/>
-              <img src="images/conf5.png" alt="meeting"/>
+          </div>
+          <div class="col"></div>
+        </div>
+
+        <div class="row container justify-content-between mt-3 cards mx-auto">
+          <div class=" col card d-none"></div>
+          <div class=" col card border-0">
+            <img src="./images/logo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-title">8th June - 7th July 2020</p>
             </div>
           </div>
-        </section>
-      </main>
-      <footer>
-        <div class="footer-logo">
-          <a href="about.html">
-            <img src="images/logo.png" alt="Standard-code"/>
-          </a>
+          <div class=" col card d-none"></div>
         </div>
-        <p>Standard code developers' conference.All rights reserved.</p>
-      </footer>
-    </div>
+
+        <section>
+          <div class="row container justify-content-between mt-3 cards mx-auto">
+          <div class=" col card d-none"></div>
+          <div class=" col card border-0 text-center">
+            <h2>See the past E.A Summits</h2>
+          </div>
+          <div class=" col card d-none"></div>
+        </div>
+        <div class="row program-title container mx-auto">
+          <div class="col"></div>
+          <div class="col-4"><hr id="line"></div>
+          <div class="col"></div>
+        </div>
+        <div class="row container justify-content-between mt-3 mb-5 cards mx-auto">
+          <div class=" col card d-none"></div>
+          <div class=" col card border-0 mb-2">
+            <img src="./images/summit1.jfif" class="card-img-top prev" alt="...">
+            <h5 class="card-title">2017<br>The Rwanda symposium</h5>
+            <div class="card-body"></div>
+          </div>
+          <div class=" col card border-0 mb-2">
+            <img src="./images/summit2.jfif" class="card-img-top prev" alt="...">
+            <h5 class="card-title">2014<br>The Nairobi symposium</h5>
+            <div class="card-body"></div>
+          </div>
+          <div class=" col card d-none"></div>
+        </div>
+        </section>
+      </section>
+    </main>
+    <footer class="container-fluid">
+      <div class="footer-logo container-fluid p-2 mx-auto lead text-dark">
+        <a href="index.html"> <img src="images/logo.png" alt="Standard-oil"></a> 
+        <p class="lead">
+          East African software developers' symposium.All
+          rights reserved.
+        </p> 
+      </div>
+    </footer>
+    </main>
     <script src="about.js"></script>
   </body>
 </html>
