--- a/index.html
+++ b/index.html
@@ -17,148 +17,163 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header class="fixed-top">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-nav">
-        <div class="container-fluid">
-          <button class="navbar-toggler bg-toggle1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="ms-auto"></div>-
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
-              <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i></a></li>
-              <li class="nav-item"><a class="nav-link" href="#">English</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">My page</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-  
-      <nav class="navbar navbar-expand-lg navbar-light bg-white btm-nav">
-        <div class="container-fluid" id="mobile-view">
-          <a class="navbar-brand" href="#"><img id="logo" src="./images/logo.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="ms-auto"></div>
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link active" href="about.html">about</a></li>
-              <li class="nav-item"><a class="nav-link active" href="#">program</a></li>
-              <li class="nav-item"><a class="nav-link active" href="#">Developers</a></li>
-              <li class="nav-item"><a class="nav-link active" href="#">Sponsors</a></li>
-              <li class="nav-item border border-3 border-danger"><a class="nav-link" href="#">CB Campain</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section id="landing-p">
-        <div class="container">
-          <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10 mt-5 mb-2 pt-5">
-              <h1>"Hello! ICT World"</h1>
-              <h2 class="mb-5">The east african software<br>developers' Community Annual symposium<br>2022</h2>
-              <p id="intro">
-                I am excited to inform you about our annual symposium .This symposium brings together the 
-                community of experts,academics and activists who comprise the Standard code Academy, affiliate 
-                network in different countries every year.This year we we hope to expand our invitation list including organisations and individuals.
-              </p>
-              <h3 class="mt-5">2022.12.22(THU) <span>&#126;</span> 2022.12.30(FRI)</h3>
-              <p id="venue">&#64; Serena Hotel, Kampala Uganda</p>
-            </div>
-            <div class="col-1"></div>
-          </div>
-        </div>
-      </section>
-      <section class="program" id="program">
-        <div class="row program-title container-fluid mx-auto">
-          <div class="col"></div>
-          <div class="col mt-3 pt-3"><h3>Main Program</h3></div>
-          <div class="col"></div>
-        </div>
-        <div class="row program-title container mx-auto">
-          <div class="col"></div>
-          <div class="col"><hr id="line"></div>
-          <div class="col"></div>
-        </div>
-
-        <div class="row container justify-content-between mt-3 cards mx-auto">
-          <div class=" col card">
-            <img src="./images/speak.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Lecture</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
+    <div class="wrapper container-fluid">
+      <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-nav">
+          <div class="container-fluid">
+            <!-- <button class="navbar-toggler bg-toggle1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button> -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <div class="ms-auto"></div>-
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#">English</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">My page</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+              </ul>
             </div>
           </div>
-          <div class="col card">
-            <img src="./images/exhibit.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Exhibition</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
+        </nav>
+    
+        <nav class="navbar navbar-expand-lg navbar-light bg-white btm-nav">
+          <div class="container-fluid" id="mobile-view">
+            <a class="navbar-brand" href="#"><img id="logo" src="./images/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <div class="ms-auto"></div>
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Program</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Developers</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Sponsors</a></li>
+                <li class="nav-item border border-3 border-danger"><a class="nav-link" href="#">CB Campain</a></li>
+              </ul>
             </div>
           </div>
-          <div class="col card">
-            <img src="./images/forum.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Forum</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
+        </nav>
+      </header>
+      <main>
+        <section id="landing-p">
+          <div class="container">
+            <div class="row">
+              <div class="col-1"></div>
+              <div class="col-10 mt-5 mb-2 pt-5">
+                <h1>"Hello! ICT World"</h1>
+                <h2 class="mb-5">The east african software<br>developers' Community Annual symposium<br>2022</h2>
+                <p id="intro">
+                  I am excited to inform you about our annual symposium .This symposium brings together the 
+                  community of experts,academics and activists who comprise the Standard code Academy, affiliate 
+                  network in different countries every year.This year we we hope to expand our invitation list including organisations and individuals.
+                </p>
+                <h3 class="mt-5">2022.12.22(THU) <span>&#126;</span> 2022.12.30(FRI)</h3>
+                <p id="venue">&#64; Serena Hotel, Kampala Uganda</p>
+              </div>
+              <div class="col-1"></div>
             </div>
           </div>
-          <div class="col card">
-            <img src="./images/wkshop.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Workshop</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
+        </section>
+        <section class="program" id="program">
+          <div class="row program-title container-fluid mx-auto">
+            <div class="col"></div>
+            <div class="col col- mt-3 pt-3"><h3>Main Program</h3></div>
+            <div class="col"></div>
+          </div>
+          <div class="row program-title container mx-auto">
+            <div class="col"></div>
+            <div class="col"><hr id="line"></div>
+            <div class="col"></div>
+          </div>
+          <div class="container-md">
+            <div class="row mt-3 cards mx-auto">
+              <div class=" col-md-auto card">
+                <img src="./images/speak.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Lecture</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-auto card">
+                <img src="./images/exhibit.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Exhibition</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-auto card">
+                <img src="./images/forum.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Forum</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-auto card">
+                <img src="./images/wkshop.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Workshop</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-auto card">
+                <img src="./images/ignite.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Resources</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col card">
-            <img src="./images/ignite.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Resources</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
-            </div>
+          <div class="d-grid gap-2 col-8 mx-auto mt-5">
+            <button class="btn btn-primary" type="button">Book a Seat</button>
           </div>
-        </div>
-        <div class="d-grid gap-2 col-8 mx-auto mt-5">
-          <button class="btn btn-primary" type="button">Book a Seat</button>
-        </div>
+          <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
+            <h3 class="lead">Guest speakers</h3>
+          </div>
+        </section>
+        <section class="speakers" id="speakers"></section>
+      </main>
+      <footer>
         <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
-          <h3 class="lead">Guest speakers</h3>
+          <h3 class="lead">Partners</h3>
         </div>
-      </section>
-      <section class="speakers" id="speakers"></section>
-    </main>
-    <footer>
-      <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
-        <h3 class="lead">Partners</h3>
-      </div>
-      <div class="logo1">
-        <img src="images/krones.png" alt="krones">
-        <img src="images/fbook.png" alt="facebook">     
-        <img src="images/acer.png" alt="acer">
-        <img src="images/lenovo.png" alt="lenovo">
-        <img src="images/amazon.png" alt="amazon">
-      </div>
-      <div class="footer-logo">
-        <a href="index.html"> <img src="images/logo.png" alt="Standard-oil"></a> East African software developers' symposium.All
-        rights reserved.
-      </div>
-    </footer>
+        <div class="container-fluid partners text-center">
+          <div class="row row-cols-md-5 logo1 mx-auto">
+            <div class="col">
+              <img src="images/ucc.jfif" alt="uganda communications">
+            </div>
+            <div class="col">
+              <img src="images/mtn.png" alt="mtn-ug">
+            </div>
+            <div class="col col-sm-12 col-md-6 col-lg-2"> 
+              <img src="images/lyca-mobile.png" alt="lycamobile">
+            </div>
+            <div class="col">
+              <img src="images/jumia.png" alt="jumia"></div>
+            <div class="col">
+            <img src="images/pepsi.jfif" alt="pepsi">
+          </div>
+        </div>
+        </div>
+        <div class="footer-logo container-fluid p-4 mt-4 mx-auto lead text-dark">
+          <a href="index.html"> <img src="images/logo.png" alt="Standard-oil"></a> 
+          East African software developers' symposium.All
+          rights reserved.
+        </div>
+      </footer>
+    </div>
     <script 
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
