--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
       <header class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-nav">
           <div class="container-fluid">
-            <!-- <button class="navbar-toggler bg-toggle1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button> -->
             <div class="collapse navbar-collapse" id="navbarNav">
               <div class="ms-auto"></div>-
               <ul class="navbar-nav">
@@ -40,21 +37,38 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white btm-nav">
           <div class="container-fluid" id="mobile-view">
             <a class="navbar-brand" href="#"><img id="logo" src="./images/logo.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" aria-controls="navbarNav" id="burger">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <div class="ms-auto"></div>
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">Program</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">Developers</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">Sponsors</a></li>
+                <li class="nav-item"><a class="nav-link active" href="program">Program</a></li>
+                <li class="nav-item"><a class="nav-link active" href="speakers">Speakers</a></li>
+                <li class="nav-item"><a class="nav-link active" href="partners">Sponsors</a></li>
                 <li class="nav-item border border-3 border-danger"><a class="nav-link" href="#">CB Campain</a></li>
               </ul>
             </div>
           </div>
         </nav>
+      </div>
+
+      <!----------popup------------------>
+
+      <div class="mobileMenu">
+        <div class="faIcon"><i class="fas fa-times fa-2x" id="hideMenu"></i></div>
+        <ul class="navbar-nav" id="popup">
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="program">Program</a></li>
+          <li class="nav-item"><a class="nav-link active" href="speakers">Speakers</a></li>
+          <li class="nav-item"><a class="nav-link active" href="partners">Sponsors</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#">CB Campain</a></li>
+        </ul>
+      </div>
+        
+      <!------End popup------------------>
+
       </header>
       <main>
         <section id="landing-p">
@@ -143,29 +157,34 @@
             <h3 class="lead">Guest speakers</h3>
           </div>
         </section>
-        <section class="speakers" id="speakers"></section>
+        <section class="container-fluid speakers text-center mx-auto " id="speakers">
+          <div class="row text-center mx-auto">
+            <div class="col cols-md-auto" id="myspeakers"></div>
+          </div>
+        </section>
       </main>
       <footer>
-        <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
-          <h3 class="lead">Partners</h3>
-        </div>
-        <div class="container-fluid partners text-center">
-          <div class="row row-cols-md-5 logo1 mx-auto">
-            <div class="col">
-              <img src="images/ucc.jfif" alt="uganda communications">
-            </div>
-            <div class="col">
-              <img src="images/mtn.png" alt="mtn-ug">
-            </div>
-            <div class="col col-sm-12 col-md-6 col-lg-2"> 
-              <img src="images/lyca-mobile.png" alt="lycamobile">
-            </div>
-            <div class="col">
-              <img src="images/jumia.png" alt="jumia"></div>
-            <div class="col">
-            <img src="images/pepsi.jfif" alt="pepsi">
+        <div id="hidden">
+          <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
+            <h3 class="lead">Partners</h3>
           </div>
-        </div>
+          <div class="container  text-center">
+            <div class="row logo1 gap-2 mx-auto">
+              <div class="col-md-auto">
+                <img src="images/ucc.jfif" alt="uganda communications">
+              </div>
+              <div class="col-md-auto">
+                <img src="images/mtn.png" alt="mtn-ug">
+              </div>
+              <div class="col-md-auto"> 
+                <img src="images/lyca-mobile.png" alt="lycamobile">
+              </div>
+              <div class="col-md-auto">
+                <img src="images/jumia.png" alt="jumia"></div>
+              <div class="col-md-auto">
+              <img src="images/pepsi.jfif" alt="pepsi">
+            </div>
+          </div>
         </div>
         <div class="footer-logo container-fluid p-4 mt-4 mx-auto lead text-dark">
           <a href="index.html"> <img src="images/logo.png" alt="Standard-oil"></a> 
@@ -179,5 +198,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
       crossorigin="anonymous">
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
