--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="container-fluid" id="mobile-view">
           <a class="navbar-brand" href="#"><img id="logo" src="./images/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" id="burger" data-bs-toggle="collapse"aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" id="mmm"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="ms-auto"></div>
@@ -51,16 +51,17 @@
           </div>
         </div>
       </nav>
-          <!----------popup------------------>
+
+      <!----------popup------------------>
 
       <div class="mobileMenu">
         <div class="faIcon"><i class="fas fa-times fa-2x" id="hideMenu"></i></div>
         <ul class="navbar-nav" id="popup">
-          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="program">Program</a></li>
-          <li class="nav-item"><a class="nav-link active" href="speakers">Speakers</a></li>
-          <li class="nav-item"><a class="nav-link active" href="partners">Sponsors</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">CB Campain</a></li>
+          <li class="nav-item"><a class="nav-link active link1" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active link1" href="program">Program</a></li>
+          <li class="nav-item"><a class="nav-link active link1" href="speakers">Speakers</a></li>
+          <li class="nav-item"><a class="nav-link active link1" href="partners">Sponsors</a></li>
+          <li class="nav-item"><a class="nav-link active link1" href="#">CB Campain</a></li>
         </ul>
       </div>
         
