--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="faIcon"><i class="fas fa-times fa-2x" id="hideMenu"></i></div>
         <ul class="navbar-nav" id="popup">
           <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="program">Program</a></li>
-          <li class="nav-item"><a class="nav-link active" href="speakers">Speakers</a></li>
-          <li class="nav-item"><a class="nav-link active" href="partners">Sponsors</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#program">Program</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#speakers">Speakers</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#partners">Sponsors</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">CB Campain</a></li>
         </ul>
       </div>
