--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
         </div>
         </section>
       </section>
-      <footer class="container-fluid">
+      <footer class="container-fluid mx-auto">
         <div class="footer-logo container-fluid p-2 mx-auto lead text-dark">
           <a href="index.html"> <img src="images/logo.png" alt="Standard-oil"></a> 
           <p class="lead">
