--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <div class="col"><hr id="line"></div>
             <div class="col"></div>
           </div>
-          <div class="container-md">
-            <div class="row mt-3 cards mx-auto">
+          <div class="container-fluid">
+            <div class="row mt-3 cards mx-auto programs">
               <div class=" col-md-auto card">
                 <img src="./images/speak.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -162,7 +162,7 @@
           </div>
         </section>
       </main>
-      <footer>
+      <footer class="container-fluid">
         <div id="hidden">
           <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
             <h3 class="lead">Partners</h3>
