--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="container-fluid">
             <div class="row mt-3 cards mx-auto programs">
-              <div class=" col-md-auto card">
+              <div class=" col-md-2 card">
                 <img src="./images/speak.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Lecture</h5>
@@ -111,7 +111,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-auto card">
+              <div class="col-md-2 card">
                 <img src="./images/exhibit.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Exhibition</h5>
@@ -120,7 +120,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-auto card">
+              <div class="col-md-2 card">
                 <img src="./images/forum.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Forum</h5>
@@ -129,7 +129,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-auto card">
+              <div class="col-md-2 card">
                 <img src="./images/wkshop.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Workshop</h5>
@@ -138,7 +138,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-auto card">
+              <div class="col-md-2 card">
                 <img src="./images/ignite.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Resources</h5>
