Add space between cards, Move the 'Guest speakers' header into Speakers section

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
           </div>
           <div class="row program-title container mx-auto">
             <div class="col"></div>
-            <div class="col"><hr id="line"></div>
+            <div class="col mb-3"><hr id="line"></div>
             <div class="col"></div>
           </div>
           <div class="container-fluid">
-            <div class="row mt-3 cards mx-auto programs">
+            <div class="row mt-3 cards gy-1 gx-3 mx-auto programs">
               <div class=" col-md-2 card">
                 <img src="./images/speak.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -149,14 +149,19 @@
               </div>
             </div>
           </div>
-          <div class="d-grid gap-2 col-8 mx-auto mt-5">
-            <button class="btn btn-primary" type="button">Book a Seat</button>
-          </div>
-          <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
-            <h3 class="lead">Guest speakers</h3>
+          <div class="row d-grid gap-2 mx-auto mt-5 mb-5">
+            <button class="btn btn-primary mb-5 col-7" type="button">Book a Seat</button>
           </div>
         </section>
-        <section class="container-fluid speakers text-center mx-auto " id="speakers">
+        <section class="container-fluid speakers text-center mx-auto" id="speakers">
+          <div class=" d-grid gap-2 col-8 mx-auto mt-5">
+            <h3 class="lead">Guest speakers</h3>
+          </div>
+          <div class="row program-title container mx-auto">
+            <div class="col"></div>
+            <div class="col mb-3"><hr id="line"></div>
+            <div class="col"></div>
+          </div>
           <div class="row text-center mx-auto">
             <div class="col cols-md-auto" id="myspeakers"></div>
           </div>
